--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,8 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "chroma-js": "^2.1.2",
+    "emojis-list": "^3.0.0",
     "link-preview-js": "2.1.6",
     "query-string": "7.0.0",
     "react": "^17.0.2",
